--- a/godseed-webapp/src/assets/base.css
+++ b/godseed-webapp/src/assets/base.css
@@ -83,7 +83,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-input, textarea {
+input, textarea, select {
     background-color: darkslategray;
 }
 
