--- a/godseed-webapp/src/assets/base.css
+++ b/godseed-webapp/src/assets/base.css
@@ -65,18 +65,7 @@ body {
     transition: color 0.5s,
     background-color 0.5s;
     line-height: 1.6;
-    font-family: Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
+    font-family: 'Helvetica Neue', sans-serif;
     font-size: 15px;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -84,14 +73,34 @@ body {
 }
 
 input, textarea, select {
-    background-color: darkslategray;
+    background-color: rgba(214, 214, 214, 0.05);
+    color: white;
+    border-radius: 1rem;
 }
 
 button {
     background-color: mediumpurple;
+    padding: 0.5rem 1rem;
+    margin: 0.5rem;
+    border-radius: 1rem;
     color: white;
 
     &:hover {
         background-color: purple;
     }
+}
+
+h1 {
+    font-size: 2rem;
+    margin: 0;
+}
+
+h2 {
+    font-size: 1.5rem;
+    margin: 0;
+}
+
+h3 {
+    font-size: 1.25rem;
+    margin: 0;
 }
