--- a/godseed-webapp/src/assets/base.css
+++ b/godseed-webapp/src/assets/base.css
@@ -23,9 +23,9 @@
 
 /* semantic color variables for this project */
 :root {
-    --color-background: var(--vt-c-white);
-    --color-background-soft: var(--vt-c-white-soft);
-    --color-background-mute: var(--vt-c-white-mute);
+    --color-background: #181818;
+    --color-background-soft: #181818;
+    --color-background-mute: #181818;
 
     --color-border: var(--vt-c-divider-light-2);
     --color-border-hover: var(--vt-c-divider-light-1);
@@ -38,9 +38,9 @@
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --color-background: var(--vt-c-black);
-        --color-background-soft: var(--vt-c-black-soft);
-        --color-background-mute: var(--vt-c-black-mute);
+        --color-background: #181818;
+        --color-background-soft: #181818;
+        --color-background-mute: #181818;
 
         --color-border: var(--vt-c-divider-dark-2);
         --color-border-hover: var(--vt-c-divider-dark-1);
